pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:12:79: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE,error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\":\n                                                                              ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:20:45: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\": \"hello\"\n                                            ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:23:50: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n      3: /*error:MAP_VALUE_TYPE_NOT_ASSIGNABLE*/ 3\n                                                 ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:27:45: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\":\n                                            ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:28:51: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n          /*error:MAP_VALUE_TYPE_NOT_ASSIGNABLE*/ 3\n                                                  ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:48:50: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n      3: /*error:MAP_VALUE_TYPE_NOT_ASSIGNABLE*/ 3\n                                                 ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:52:56: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n      \"hello\": /*error:MAP_VALUE_TYPE_NOT_ASSIGNABLE*/ 3\n                                                       ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:59:45: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\": \"hello\"\n                                            ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:64:45: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\": 3\n                                            ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:80:79: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE,error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\":\n                                                                              ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:84:86: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n      3: /*error:MAP_VALUE_TYPE_NOT_ASSIGNABLE,error:MAP_VALUE_TYPE_NOT_ASSIGNABLE*/ 3\n                                                                                     ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:88:79: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n      /*error:MAP_KEY_TYPE_NOT_ASSIGNABLE,error:MAP_KEY_TYPE_NOT_ASSIGNABLE*/ \"hello\":\n                                                                              ^", "pkg/front_end/testcases/inference/downwards_inference_on_map_literals.dart:89:87: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n          /*error:MAP_VALUE_TYPE_NOT_ASSIGNABLE,error:MAP_VALUE_TYPE_NOT_ASSIGNABLE*/ 3\n                                                                                      ^"]/* from null */;
static method foo([core::Map<core::int, core::String> m1 = const <core::int, core::String>{1: "hello"}, core::Map<core::int, core::String> m2 = const <core::int, core::String>{"hello" as{TypeError} core::int: "world"}]) → void {}
static method test() → void {
  {
    core::Map<core::int, core::String> l0 = <core::int, core::String>{};
    core::Map<core::int, core::String> l1 = <core::int, core::String>{3: "hello"};
    core::Map<core::int, core::String> l2 = <core::int, core::String>{"hello" as{TypeError} core::int: "hello"};
    core::Map<core::int, core::String> l3 = <core::int, core::String>{3: 3 as{TypeError} core::String};
    core::Map<core::int, core::String> l4 = <core::int, core::String>{3: "hello", "hello" as{TypeError} core::int: 3 as{TypeError} core::String};
  }
  {
    core::Map<dynamic, dynamic> l0 = <dynamic, dynamic>{};
    core::Map<dynamic, dynamic> l1 = <dynamic, dynamic>{3: "hello"};
    core::Map<dynamic, dynamic> l2 = <dynamic, dynamic>{"hello": "hello"};
    core::Map<dynamic, dynamic> l3 = <dynamic, dynamic>{3: 3};
    core::Map<dynamic, dynamic> l4 = <dynamic, dynamic>{3: "hello", "hello": 3};
  }
  {
    core::Map<dynamic, core::String> l0 = <dynamic, core::String>{};
    core::Map<dynamic, core::String> l1 = <dynamic, core::String>{3: "hello"};
    core::Map<dynamic, core::String> l2 = <dynamic, core::String>{"hello": "hello"};
    core::Map<dynamic, core::String> l3 = <dynamic, core::String>{3: 3 as{TypeError} core::String};
    core::Map<dynamic, core::String> l4 = <dynamic, core::String>{3: "hello", "hello": 3 as{TypeError} core::String};
  }
  {
    core::Map<core::int, dynamic> l0 = <core::int, dynamic>{};
    core::Map<core::int, dynamic> l1 = <core::int, dynamic>{3: "hello"};
    core::Map<core::int, dynamic> l2 = <core::int, dynamic>{"hello" as{TypeError} core::int: "hello"};
    core::Map<core::int, dynamic> l3 = <core::int, dynamic>{3: 3};
    core::Map<core::int, dynamic> l4 = <core::int, dynamic>{3: "hello", "hello" as{TypeError} core::int: 3};
  }
  {
    core::Map<core::int, core::String> l0 = <core::num, dynamic>{} as{TypeError} core::Map<core::int, core::String>;
    core::Map<core::int, core::String> l1 = <core::num, dynamic>{3: "hello"} as{TypeError} core::Map<core::int, core::String>;
    core::Map<core::int, core::String> l3 = <core::num, dynamic>{3: 3} as{TypeError} core::Map<core::int, core::String>;
  }
  {
    const core::Map<core::int, core::String> l0 = const <core::int, core::String>{};
    const core::Map<core::int, core::String> l1 = const <core::int, core::String>{3: "hello"};
    const core::Map<core::int, core::String> l2 = const <core::int, core::String>{"hello" as{TypeError} core::int: "hello"};
    const core::Map<core::int, core::String> l3 = const <core::int, core::String>{3: 3 as{TypeError} core::String};
    const core::Map<core::int, core::String> l4 = const <core::int, core::String>{3: "hello", "hello" as{TypeError} core::int: 3 as{TypeError} core::String};
  }
}
static method main() → dynamic {}
